src/objects/Incentive__c.object
<CustomObject>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IncentiveValue__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Incentive Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Description__c</fullName>
        <label>Incentive Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Valid_For_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Valid For Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>PP-1313
&quot;Supplier&quot; on the Incentive Object</description>
        <label>Supplier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validity_Status__c</fullName>
        <description>This formula checks whether a particular incentive has expired based valid-to and valid-from dates.
This field is used in the Subscription_Incentive object &quot;Incentive&quot; lookup filter condition.</description>
        <formula>IF( Valid_From__c &lt;= TODAY() &amp;&amp;  Valid_To__c &gt;= TODAY(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validity Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Incentive</label>
    <nameField>
        <label>Incentive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>